@@ -57,6 +57,7 @@ NEWS
   * [core] lighttpd -tt performs preflight startup checks (fixes #411)
   * [stat] mimetype.xattr-name global config option (fixes #2631)
   * [mod_webdav] allow Depth: Infinity lock on file (fixes #2296)
+  * [mod_status] use snprintf() instead of sprintf()
 
 - 1.4.39 - 2016-01-02
   * [core] fix memset_s call (fixes #2698)
